Refactor validation from jWT token to http cookies, add validation for loginrequest, fix some tests